--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@teachablemachine/image": "^0.8.4",
     "@tensorflow/tfjs": "^2.8.6",
+    "copy-to-clipboard": "^3.3.1",
     "html2canvas": "^1.0.0-rc.7",
     "next": "10.0.7",
     "react": "17.0.1",
+    "react-device-detect": "^1.15.0",
     "react-dom": "17.0.1",
     "styled-components": "^5.2.1"
   }
