--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.1",
     "react-device-detect": "^1.15.0",
     "react-dom": "17.0.1",
+    "react-loading": "^2.0.3",
     "styled-components": "^5.2.1"
   }
 }
